Add more debugging and such

--- a/purebackup.conf
+++ b/purebackup.conf
@@ -1,13 +1,13 @@
 # Example conf file for purebackup
 
 mountpoint {
-  mount=/snes
+  mount=/really/long/path/snes
   type=file
   source=/cygdrive/c/snes
 }
 
 mountpoint {
-  mount=/werk
+  mount=/really/werk
   type=file
   source=/cygdrive/c/werk
 }
