--- a/purebackup.conf
+++ b/purebackup.conf
@@ -106,10 +106,10 @@ mask {
   remove=/shodan/c/mirrors/rimu
 }
 
-# And here is my chat/web browsing box
+# And here is my chat/web browsing box old version
 
 mountpoint {
-  mount=/maximilian
+  mount=/maximilian-old
   type=file
   source=c:/max
 }
@@ -119,7 +119,31 @@ mask {
 }
 
 mask {
-  remove=/maximilian/Program Files/eMule/Temp
+  remove=/maximilian-old/Program Files/eMule/Temp
+}
+
+mask {
+  remove=/maximilian-old/Program Files/Trillian/users/default/logs/JABBER/Console
+}
+
+mask {
+  remove=/maximilian-old/Documents and Settings/zorba/Desktop/x
+}
+
+mask {
+  remove=/maximilian-old/Documents and Settings/zorba/Local Settings/Temporary Internet Files
+}
+
+mask {
+  remove=/maximilian-old/mombackup
+}
+
+# And here is my chat/web browsing box new version
+
+mountpoint {
+  mount=/maximilian
+  type=file
+  source=//maximilian/c
 }
 
 mask {
@@ -135,5 +159,5 @@ mask {
 }
 
 mask {
-  remove=/maximilian/mombackup
+  remove=/maximilian/RECYCLER
 }
