--- a/purebackup.conf
+++ b/purebackup.conf
@@ -31,7 +31,11 @@ mask {
 
 mask {
   remove=/shodan/c/data/images/nobackup
-  }
+}
+
+mask {
+  remove=/shodan/c/data/video/dvd
+}
 
 mask {
   remove=/shodan/c/cygwin/etc/X11
@@ -58,19 +62,15 @@ mask {
 }
 
 mask {
+  remove=/shodan/c/Program Files (x86)/BOINC
+}
+
+mask {
   remove=/shodan/c/Program Files (x86)/Valve
 }
 
 mask {
-  remove=/shodan/c/Program Files/GPotato
-}
-
-mask {
   remove=/shodan/c/Program Files (x86)/Stardock
-}
-
-mask {
-  remove=/shodan/c/Program Files (x86)/Microsoft Games/Rise Of Legends
 }
 
 # Here is my gateway
@@ -118,26 +118,6 @@ mask {
   remove=/shodan/c/max
 }
 
-mask {
-  remove=/maximilian-old/Program Files/eMule/Temp
-}
-
-mask {
-  remove=/maximilian-old/Program Files/Trillian/users/default/logs/JABBER/Console
-}
-
-mask {
-  remove=/maximilian-old/Documents and Settings/zorba/Desktop/x
-}
-
-mask {
-  remove=/maximilian-old/Documents and Settings/zorba/Local Settings/Temporary Internet Files
-}
-
-mask {
-  remove=/maximilian-old/mombackup
-}
-
 # And here is my chat/web browsing box new version
 
 mountpoint {
@@ -164,4 +144,16 @@ mask {
 
 mask {
   remove=/maximilian/mombackup
+}
+
+mask {
+  remove=/maximilian/Program Files/Trillian/users/default/trillian.ini
+}
+
+mask {
+  remove=/maximilian/WINDOWS/Prefetch
+}
+
+mask {
+  remove=/maximilian/Documents and Settings/zorba/Local Settings/Application Data/Mozilla/Firefox/Profiles/c77ni6mi.default/Cache
 }
