--- a/purebackup.conf
+++ b/purebackup.conf
@@ -18,7 +18,7 @@ mask {
 }
 
 mask {
-  remove=/shodan/c/werk/sea/d-net/dumps
+  remove=/shodan/c/werk/d-net/dumps
 }
 
 mask {  # Rather than making things more durable, I'm simply removing parts of the tree that cause problems occasionally
@@ -58,6 +58,10 @@ mask {
 }
 
 mask {
+  remove=/shodan/c/WINDOWS/SoftwareDistribution
+}
+
+mask {
   remove=/shodan/c/Program Files/Valve
 }
 
@@ -71,6 +75,10 @@ mask {
 
 mask {
   remove=/shodan/c/Program Files (x86)/Stardock
+}
+
+mask {
+  remove=/shodan/c/Documents and Settings/zorba/Cookies
 }
 
 # Here is my gateway
@@ -155,5 +163,13 @@ mask {
 }
 
 mask {
+  remove=/maximilian/WINDOWS/SoftwareDistribution
+}
+
+mask {
   remove=/maximilian/Documents and Settings/zorba/Local Settings/Application Data/Mozilla/Firefox/Profiles/c77ni6mi.default/Cache
+}
+
+mask {
+  remove=/maximilian/Documents and Settings/zorba/Cookies
 }
