--- a/purebackup.conf
+++ b/purebackup.conf
@@ -21,10 +21,6 @@ mask {
   remove=/shodan/c/werk/d-net/dumps
 }
 
-mask {  # Rather than making things more durable, I'm simply removing parts of the tree that cause problems occasionally
-  remove=/shodan/c/Program Files (x86)/distributed.net
-}
-
 mask {
   remove=/shodan/c/data/vm
 }
@@ -62,14 +58,6 @@ mask {
 }
 
 mask {
-  remove=/shodan/c/Program Files/Valve
-}
-
-mask {
-  remove=/shodan/c/Program Files (x86)/BOINC
-}
-
-mask {
   remove=/shodan/c/Program Files (x86)/Valve
 }
 
@@ -78,7 +66,43 @@ mask {
 }
 
 mask {
+  remove=/shodan/c/Program Files (x86)/Flying Lab Software
+}
+
+mask {
+  remove=/shodan/c/Program Files (x86)/xc2
+}
+
+mask {
+  remove=/shodan/c/Program Files (x86)/pspvideo9/MP_ROOT
+}
+
+mask {
+  remove=/shodan/c/Program Files (x86)/CCP
+}
+
+mask {
+  remove=/shodan/c/Program Files (x86)/EVEMon
+}
+
+mask {
+  remove=/shodan/c/langames
+}
+
+mask {
   remove=/shodan/c/Documents and Settings/zorba/Cookies
+}
+
+mask {
+  remove=/shodan/c/Documents and Settings/zorba/Desktop/torrent
+}
+
+mask {
+  remove=/shodan/c/Documents and Settings/zorba/Local Settings/Application Data/Mozilla/Firefox/Profiles/hfjqhvar.default/Cache
+}
+
+mask {
+  remove=/shodan/c/Documents and Settings/zorba/Application Data/Mozilla/Firefox/Profiles/hfjqhvar.default/urlclassifier2.sqlite
 }
 
 # Here is my gateway
@@ -114,18 +138,6 @@ mask {
   remove=/shodan/c/mirrors/rimu
 }
 
-# And here is my chat/web browsing box old version
-
-mountpoint {
-  mount=/maximilian-old
-  type=file
-  source=c:/max
-}
-
-mask {
-  remove=/shodan/c/max
-}
-
 # And here is my chat/web browsing box new version
 
 mountpoint {
@@ -159,7 +171,15 @@ mask {
 }
 
 mask {
+  remove=/maximilian/Program Files/eMule
+}
+
+mask {
   remove=/maximilian/WINDOWS/Prefetch
+}
+
+mask {
+  remove=/maximilian/WINDOWS/system32/wbem/Repository
 }
 
 mask {
@@ -171,5 +191,10 @@ mask {
 }
 
 mask {
+  remove=/maximilian/Documents and Settings/zorba/Application Data/Mozilla/Firefox/Profiles/c77ni6mi.default/urlclassifier2.sqlite
+}
+
+mask {
   remove=/maximilian/Documents and Settings/zorba/Cookies
 }
+
