--- a/purebackup.conf
+++ b/purebackup.conf
@@ -74,11 +74,11 @@ mask {
 }
 
 mask {
-  remove=/shodan/c/Program Files (x86)/pspvideo9/MP_ROOT
+  remove=/shodan/c/Program Files (x86)/CCP
 }
 
 mask {
-  remove=/shodan/c/Program Files (x86)/CCP
+  remove=/shodan/c/Program Files (x86)/THQ
 }
 
 mask {
@@ -105,6 +105,10 @@ mask {
   remove=/shodan/c/Documents and Settings/zorba/Application Data/Mozilla/Firefox/Profiles/hfjqhvar.default/urlclassifier2.sqlite
 }
 
+mask {
+  remove=/shodan/c/Documents and Settings/zorba/Local Settings/Application Data/EVEMon/cache
+}
+
 # Here is my gateway
 mountpoint {
   mount=/skynet
@@ -125,6 +129,57 @@ mountpoint {
 
 mask {
   remove=/shodan/c/mirrors/cams
+}
+
+# Here is a slew of VMs
+mountpoint {
+  mount=/cams.calcme
+  type=file
+  source=c:/mirrors/cams.calcme
+}
+
+mask {
+  remove=/shodan/c/mirrors/cams.calcme
+}
+
+mountpoint {
+  mount=/cams.eggdrop
+  type=file
+  source=c:/mirrors/cams.eggdrop
+}
+
+mask {
+  remove=/shodan/c/mirrors/cams.eggdrop
+}
+
+mountpoint {
+  mount=/cams.httpd
+  type=file
+  source=c:/mirrors/cams.httpd
+}
+
+mask {
+  remove=/shodan/c/mirrors/cams.httpd
+}
+
+mountpoint {
+  mount=/cams.torclient
+  type=file
+  source=c:/mirrors/cams.torclient
+}
+
+mask {
+  remove=/shodan/c/mirrors/cams.torclient
+}
+
+mountpoint {
+  mount=/cams.torserver
+  type=file
+  source=c:/mirrors/cams.torserver
+}
+
+mask {
+  remove=/shodan/c/mirrors/cams.torserver
 }
 
 # Here is my hosting box
@@ -198,3 +253,6 @@ mask {
   remove=/maximilian/Documents and Settings/zorba/Cookies
 }
 
+mask {
+  remove=/maximilian/c/Documents and Settings/zorba/Local Settings/Application Data/EVEMon/cache
+}
