I think this works now, improved memory consumption and stuff

--- a/purebackup.conf
+++ b/purebackup.conf
@@ -1,36 +1,119 @@
 # Example conf file for purebackup
 
-# Here is my main computer
 mountpoint {
-  mount=/shodan/c
+  mount=/glados
   type=file
   source=c:
 }
 
+mask {
+  remove=/glados/old
+}
+
+mask {
+  remove=/glados/maxpull
+}
+
+mask {
+  remove=/glados/werk/purebackup/temp
+}
+
+mask {
+  remove=/glados/werk/d-net/dumps
+}
+
+mask {
+  remove=/glados/data/vm
+}
+
+mask {
+  remove=/glados/data/images/nobackup
+}
+
+mask {
+  remove=/glados/data/video/dvd
+}
+
+mask {
+  remove=/glados/cygwin/etc/X11
+}
+
+mask {
+  remove=/glados/cygwin/usr/X11R6
+}
+
+mask {
+  remove=/glados/RECYCLER
+}
+
+mask {
+  remove=/glados/WINDOWS/system32
+}
+
+mask {
+  remove=/glados/WINDOWS/SoftwareDistribution
+}
+
+mask {
+  remove=/glados/Program Files (x86)/Valve
+}
+
+mask {
+  remove=/glados/Program Files (x86)/Stardock
+}
+
+mask {
+  remove=/glados/Program Files (x86)/xc2
+}
+
+mask {
+  remove=/glados/Program Files (x86)/CCP
+}
+
+mask {
+  remove=/glados/Program Files (x86)/THQ
+}
+
+mask {
+  remove=/glados/Program Files (x86)/EVEMon
+}
+
+mask {
+  remove=/glados/langames
+}
+
+mask {
+  remove=/glados/Documents and Settings/zorba/Cookies
+}
+
+mask {
+  remove=/glados/Documents and Settings/zorba/Desktop/torrent
+}
+
+mask {
+  remove=/glados/Documents and Settings/zorba/Local Settings/Application Data/Mozilla/Firefox/Profiles/y8rq2wgm.default/Cache
+}
+
+mask {
+  remove=/glados/Documents and Settings/zorba/Application Data/Mozilla/Firefox/Profiles/y8rq2wgm.default/urlclassifier2.sqlite
+}
+
+mask {
+  remove=/glados/Documents and Settings/zorba/Application Data/EVEMon/cache
+}
+
+# Huge music archive
 mountpoint {
-  mount=/shodan/d
+  mount=/music
   type=file
   source=d:
 }
 
-mask {
-  remove=/shodan/c/werk/sea/purebackup/temp
-}
-
-mask {
-  remove=/shodan/c/werk/d-net/dumps
-}
-
-mask {
-  remove=/shodan/c/data/vm
-}
-
-mask {
-  remove=/shodan/c/data/images/nobackup
-}
-
-mask {
-  remove=/shodan/c/data/video/dvd
+# Here is my old computer
+mountpoint {
+  mount=/shodan/c
+  type=file
+  source=c:/old
 }
 
 mask {
@@ -43,10 +126,6 @@ mask {
 
 mask {
   remove=/shodan/c/RECYCLER
-}
-
-mask {
-  remove=/shodan/d/RECYCLER
 }
 
 mask {
@@ -106,7 +185,7 @@ mask {
 }
 
 mask {
-  remove=/shodan/c/Documents and Settings/zorba/Local Settings/Application Data/EVEMon/cache
+  remove=/shodan/c/Documents and Settings/zorba/Application Data/EVEMon/cache
 }
 
 # Here is my gateway
@@ -117,7 +196,7 @@ mountpoint {
 }
 
 mask {
-  remove=/shodan/c/mirrors/skynet
+  remove=/glados/mirrors/skynet
 }
 
 # Here is my server box
@@ -128,7 +207,7 @@ mountpoint {
 }
 
 mask {
-  remove=/shodan/c/mirrors/cams
+  remove=/glados/mirrors/cams
 }
 
 # Here is a slew of VMs
@@ -139,7 +218,7 @@ mountpoint {
 }
 
 mask {
-  remove=/shodan/c/mirrors/cams.calcme
+  remove=/glados/mirrors/cams.calcme
 }
 
 mountpoint {
@@ -149,7 +228,7 @@ mountpoint {
 }
 
 mask {
-  remove=/shodan/c/mirrors/cams.eggdrop
+  remove=/glados/mirrors/cams.eggdrop
 }
 
 mountpoint {
@@ -159,7 +238,7 @@ mountpoint {
 }
 
 mask {
-  remove=/shodan/c/mirrors/cams.httpd
+  remove=/glados/mirrors/cams.httpd
 }
 
 mountpoint {
@@ -169,7 +248,7 @@ mountpoint {
 }
 
 mask {
-  remove=/shodan/c/mirrors/cams.torclient
+  remove=/glados/mirrors/cams.torclient
 }
 
 mountpoint {
@@ -179,7 +258,7 @@ mountpoint {
 }
 
 mask {
-  remove=/shodan/c/mirrors/cams.torserver
+  remove=/glados/mirrors/cams.torserver
 }
 
 # Here is my hosting box
@@ -190,7 +269,7 @@ mountpoint {
 }
 
 mask {
-  remove=/shodan/c/mirrors/rimu
+  remove=/glados/mirrors/rimu
 }
 
 # And here is my chat/web browsing box new version
@@ -253,6 +332,3 @@ mask {
   remove=/maximilian/Documents and Settings/zorba/Cookies
 }
 
-mask {
-  remove=/maximilian/c/Documents and Settings/zorba/Local Settings/Application Data/EVEMon/cache
-}
