I don't even know

--- a/purebackup.conf
+++ b/purebackup.conf
@@ -11,6 +11,14 @@ mask {
 }
 
 mask {
+  remove=/glados/olded209
+}
+
+mask {
+  remove=/glados/rawmusic
+}
+
+mask {
   remove=/glados/maxpull
 }
 
@@ -32,6 +40,10 @@ mask {
 
 mask {
   remove=/glados/data/video/dvd
+}
+
+mask {
+  remove=/glados/data/video/out
 }
 
 mask {
